[package]
name = "kamil_os"
version = "0.1.0"
edition = "2021"
authors = ["kamil"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "=0.9.22"
volatile = "=0.2.6"
spin = "0.9.4"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]