[package]
name = "kamil_os"
version = "0.1.0"
edition = "2021"
authors = ["kamil"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "=0.9.22"
volatile = "=0.2.6"
spin = "0.9.4"
x86_64 = "0.14.10"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33 # (0x10 << 1) | 1