[package]
name = "kamil_os"
version = "0.1.0"
edition = "2021"
authors = ["kamil"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "=0.9.22", features = ["map_physical_memory"]}
volatile = "=0.2.6"
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
linked_list_allocator = "=0.9.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "=0.2.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.23"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = ["-device",
             "isa-debug-exit,iobase=0xf4,iosize=0x04",
             "-serial",
             "stdio",
             "-display",
             "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 10          # (in seconds)


# Disable the test harness for the test
# as we can't continue execution after the fault
# so more than one test doesn't make sense.
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
